@@ -13,9 +13,9 @@ pm_experimental_telephones = {
 
 		level_scaled = {
 			building_employment_shopkeepers_add = 500
-			building_employment_laborers_add = 2500
+			building_employment_laborers_add = 2000
 			building_employment_machinists_add = 1500
-			building_employment_engineers_add = 500
+			building_employment_engineers_add = 1000
 		}
 	}
 }
@@ -39,9 +39,9 @@ pm_telephones = {
 
 		level_scaled = {
 			building_employment_shopkeepers_add = 500
-			building_employment_laborers_add = 2500
-			building_employment_machinists_add = 1000
-			building_employment_engineers_add = 1000
+			building_employment_laborers_add = 1500
+			building_employment_machinists_add = 1500
+			building_employment_engineers_add = 1500
 		}
 	}
 }
@@ -61,9 +61,9 @@ pm_radios = {
 
 		level_scaled = {
 			building_employment_shopkeepers_add = 500
-			building_employment_laborers_add = 2500
-			building_employment_machinists_add = 1250
-			building_employment_engineers_add = 750
+			building_employment_laborers_add = 2000
+			building_employment_machinists_add = 1500
+			building_employment_engineers_add = 1000
 		}
 	}
 
@@ -90,9 +90,9 @@ pm_lr_radios = {
 
 		level_scaled = {
 			building_employment_shopkeepers_add = 500
-			building_employment_laborers_add = 2500
-			building_employment_machinists_add = 1000
-			building_employment_engineers_add = 1000
+			building_employment_laborers_add = 1500
+			building_employment_machinists_add = 1500
+			building_employment_engineers_add = 1500
 		}
 	}
 
