@@ -1,4 +1,195 @@
-﻿### DISTILLERIES ###
+﻿### FOOD INDUSTRIES ###
+pm_bakery = {
+	texture = "gfx/interface/icons/production_method_icons/bakeries.dds"
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_grain_add = 40		# x20 =  800
+
+			# output goods
+			goods_output_groceries_add = 45	# x30 = 1350
+		}
+
+		level_scaled = {
+			# profit = 550
+			building_employment_shopkeepers_add = 500
+			building_employment_laborers_add = 4000
+		}
+	}
+}
+
+pm_sweeteners = {
+	texture = "gfx/interface/icons/production_method_icons/sweeteners.dds"
+
+	unlocking_technologies = {
+		distillation
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_grain_add = 40		# x20 = 800
+			goods_input_sugar_add = 15		# x30 = 450
+
+			# output goods
+			goods_output_groceries_add = 65	# x30 = 1950
+		}
+
+		level_scaled = {
+			# profit = 700
+			building_employment_shopkeepers_add = 500
+			building_employment_laborers_add = 3500
+			building_employment_machinists_add = 500
+		}
+	}
+}
+
+pm_baking_powder = {
+	texture = "gfx/interface/icons/production_method_icons/baking_powder.dds"
+
+	unlocking_technologies = {
+		baking_powder
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_grain_add = 80		# x20 = 1600
+			goods_input_sugar_add = 30		# x30 =  900
+
+			# output goods
+			goods_output_groceries_add = 120	# x30 = 3600
+		}
+
+		level_scaled = {
+			# profit = 1100
+			building_employment_shopkeepers_add = 500
+			building_employment_laborers_add = 3000
+			building_employment_machinists_add = 750
+			building_employment_engineers_add = 250
+		}
+	}
+}
+
+pm_disabled_canning = {
+	texture = "gfx/interface/icons/production_method_icons/no_canning.dds"
+}
+
+pm_cannery = {
+	texture = "gfx/interface/icons/production_method_icons/canneries.dds"
+
+	unlocking_technologies = {
+		canneries
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_grain_add = -20		# x20 = -400
+			goods_input_meat_add = 20		# x30 =  600
+			goods_input_iron_add = 10		# x40 =  400
+
+			# output goods
+			goods_output_groceries_add = 30	# x30 =  900
+		}
+
+		level_scaled = {
+			# profit = 300 (20.8)
+			building_employment_machinists_add = 500	# x1.5 = 750 laborer wages
+		}
+	}
+}
+
+pm_cannery_fish = {
+	texture = "gfx/interface/icons/production_method_icons/canneries.dds"
+
+	unlocking_technologies = {
+		canneries
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_grain_add = -20		# x20 = -400
+			goods_input_fish_add = 30		# x20 =  600
+			goods_input_iron_add = 10		# x40 =  400
+
+			# output goods
+			goods_output_groceries_add = 30	# x30 =  900
+		}
+
+		level_scaled = {
+			building_employment_machinists_add = 500	# x1.5 = 750 laborer wages
+		}
+	}
+}
+
+pm_vacuum_canning = {
+	texture = "gfx/interface/icons/production_method_icons/vaccum_canning.dds"
+	replacement_if_valid = pm_vacuum_canning_principle_3
+
+	unlocking_technologies = {
+		vacuum_canning
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_grain_add = -30		# x20 = -600
+			goods_input_fish_add = 30		# x20 = 600
+			goods_input_meat_add = 20		# x30 = 600
+			goods_input_iron_add = 10		# x40 =  400
+			goods_input_oil_add = 5 			# x40 =  200
+
+			# output goods
+			goods_output_groceries_add = 60	# x30 = 1800
+		}
+
+		level_scaled = {
+			building_employment_machinists_add = 300
+			building_employment_engineers_add = 200
+		}
+	}
+}
+
+pm_vacuum_canning_principle_3 = {
+	texture = "gfx/interface/icons/production_method_icons/vaccum_canning.dds"
+	is_hidden_when_unavailable = yes
+
+	unlocking_principles = {
+		principle_food_standardization_3
+	}
+
+	unlocking_technologies = {
+		vacuum_canning
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_grain_add = -30		# x20 = -600
+			goods_input_fish_add = 30		# x20 = 600
+			goods_input_meat_add = 20		# x30 = 600
+			goods_input_iron_add = 10		# x40 =  400
+			goods_input_oil_add = 5 			# x40 =  200
+
+			# output goods
+			goods_output_groceries_add = 70	# x30 = 2100
+		}
+
+		level_scaled = {
+			# profit = 600 (23.1)
+			building_employment_machinists_add = 500	# x1.5 = 750 laborer wages
+			building_employment_engineers_add = 200		# x3.0 = 600 laborer wages
+		}
+	}
+}
+
+
+
+
+### DISTILLERIES ###
 
 pm_alcohol_production = {
 	texture = "gfx/pm_icons/alcohol_production.dds"
